# bevy_minibuffer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  todo.org
docs/: new-state-diagram.dot  state-diagram.dot
examples/: add-act.rs  add-acts.rs  basic.rs  bind-hotkey.rs  cube.rs  exclude-commands.rs  only-exec-act.rs  opt-in.rs  picking.rs  simplest.rs  solicit-user.rs  tab-completion-trie-map.rs  tab-completion-trie.rs  tab-completion.rs  tapes.rs  two-commands.rs  two_commands.rs  universal-arg.rs  video-capture.rs
examples/async/: basic.rs  cube.rs  demo.rs  simplest.rs  tab-completion-trie-map.rs  tab-completion.rs  two-commands.rs  two_commands.rs  universal-arg.rs
examples/common/: lib.rs
examples/old/: cube.rs  simplest.rs  two_commands.rs
examples/readme/: tab-completion.rs
nano-macro/: Cargo.toml
nano-macro/src/: lib.rs
src/: act.rs  autocomplete.rs  basic.rs  builtin.rs  commands.rs  event.rs  future.rs  hotkey.rs  key.lalrpop  lib.rs  lookup.rs  main.rs  message.rs  old_lookup.rs  param.rs  plugin.rs  plugin_once.rs  proc.rs  prompt.rs  sink.rs  style.rs  sync.rs  tape.rs  task.rs  tasks.rs  ui.rs  universal.rs  view.rs
src/act/: acts.rs  mod.rs
src/acts/: add_acts.rs  arg.rs  basic.rs  basic_async.rs  blah.rs  builder.rs  cache.rs  collection.rs  mod.rs  plugin.rs  run_act.rs  tape.rs  universal.rs
src/acts/tape/: mod.rs
src/autocomplete/: lookup.rs  mod.rs
tests/: hotkey.rs
