[package]
name = "bevy_minibuffer"
description = "A gamedev console inspired by classic Unix text editors"
version = "0.1.0"
edition = "2021"
authors = ["Shane Celis <shane.celis@gmail.com>"]
keywords = [
    "bevy",
    "gamedev",
    "console",
]
categories = [
    "game-development"
]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shanecelis/bevy_minibuffer"

[dependencies]
bevy = "0.14"
bitflags = "2.3.1"
trie-rs = "0.4.2"
bevy-input-sequence = "0.6.0"
keyseq = { version = "0.4", features = [ "bevy" ]}
bevy_asky = { version = "0.1", default-features = false }
futures = { version = "0.3.30", optional = true }
tabular = "0.2.0"
thiserror = "1.0.58"
bevy_defer = { version = "0.12", optional = true }
bevy_channel_trigger = { version = "0.2.0", optional = true }

[features]
async = [ "dep:bevy_defer", "dep:futures", "bevy_asky/async", "dep:bevy_channel_trigger" ]
dev-capture = []

[dev-dependencies]
bevy-inspector-egui = "0.25"
bevy_framepace = "0.17.1"
bevy_image_export = "0.11.0"
rand = "0.8.5"
version-sync = "0.9.5"

[[example]]
name = "demo-async"
path = "examples/async/demo.rs"
required-features = [ "async" ]

[[example]]
name = "cube-async"
path = "examples/async/cube.rs"
required-features = [ "async" ]

[[example]]
name = "two-commands-async"
path = "examples/async/two-commands.rs"
required-features = [ "async" ]

[[example]]
name = "universal-arg-async"
path = "examples/async/universal-arg.rs"
required-features = [ "async" ]

[[example]]
name = "tab-completion-trie-map-async"
path = "examples/async/tab-completion-trie-map.rs"
required-features = [ "async" ]
