[package]
name = "bevy_minibuffer"
description = "A gamedev console inspired by classic Unix text editors"
version = "0.1.0"
edition = "2021"
authors = ["Shane Celis <shane.celis@gmail.com>"]
keywords = [
    "bevy",
    "gamedev",
    "console",
]
categories = [
    "game-development"
]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shanecelis/bevy_minibuffer"

[dependencies]
bevy = { version = "0.15.0", default-features = false, features = [ "bevy_text", "bevy_ui", "default_font", "bevy_window", "bevy_state" ] }
bitflags = "2.3.1"
trie-rs = "0.4.2"
bevy-input-sequence = "0.7.0"
keyseq = { version = "0.5.0", features = [ "bevy" ]}
bevy_asky = { version = "0.2.0", default-features = false, features = [ "color" ] }
futures = { version = "0.3.30", optional = true }
tabular = "0.2.0"
thiserror = "1.0.58"
bevy_defer = { version = "0.13", optional = true }
bevy_channel_trigger = { version = "0.3.0", optional = true }
accesskit = "0.17.1"

[features]
async = [ "dep:bevy_defer", "dep:futures", "bevy_asky/async", "dep:bevy_channel_trigger" ]
dev-capture = []

[patch.crates-io]
bevy-input-sequence = { path = "../bevy-input-sequence" }
bevy_asky = { path = "../bevy_asky" }

[dev-dependencies]
bevy = "0.15.0"
bevy-inspector-egui = "0.28"
# bevy_framepace = "0.17.1"
bevy_image_export = "0.11.0"
rand = "0.8.5"
version-sync = "0.9.5"

[[example]]
name = "demo-async"
path = "examples/async/demo.rs"
required-features = [ "async" ]

[[example]]
name = "cube-async"
path = "examples/async/cube.rs"
required-features = [ "async" ]

[[example]]
name = "two-commands-async"
path = "examples/async/two-commands.rs"
required-features = [ "async" ]

[[example]]
name = "universal-arg-async"
path = "examples/async/universal-arg.rs"
required-features = [ "async" ]

[[example]]
name = "tab-completion-async"
path = "examples/async/tab-completion.rs"
required-features = [ "async" ]
